Fixed visuals and added text
Fixed bug for BMi calculator page where the text was squished up against the right side of the page by the photo.
Added more to the description of the penguin ninja page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,9 +206,6 @@ header {
   color: white;
 }
 .panel4 {
-  background-image: url(../images/hangman.png);
-}
-.panel5 {
   background-image: url(../images/contacts.png);
   color: white;
 }
